--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" href="./dist/css/main.css" />
     </head>
         <body>
-            <h1>Visualising a week's worth of booking data...</h1>
+            <div id="path">
+                <h1>Visualising a week's worth of booking data...</h1>
+                <h3>dd:mm:yyyy hh:mm:ss</h3>
+            </div>
             <div id='mapdiv'></div>
             <footer>
                 <script src="./dist/js/bundle.js"></script>
