Add car method to promise chain

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div id="path">
                 <h1>Visualising a week's worth of booking data...</h1>
-                <h3>dd:mm:yyyy hh:mm:ss</h3>
+                <h3>Sunday, 06:00</h3>
             </div>
             <div id='mapdiv'></div>
             <footer>
