--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="description" content="Visualising booking data">
         <title>Booking Data</title>
         <link rel="stylesheet" href="./dist/vendor/leaflet/leaflet.css" />
         <link rel="stylesheet" href="./dist/css/main.css" />
@@ -9,9 +14,9 @@
                 <h1>Visualising a week's worth of booking data...</h1>
                 <h3>Sunday, 06:00</h3>
             </div>
-            <div id='mapdiv'></div>
+            <div id="root"></div>
             <footer>
-                <script src="./dist/js/bundle.js"></script>
+                <script src="./dist/bundle.js"></script>
             </footer>
         </body>
 </html>
