Add working timer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <body>
             <div id="path">
                 <h1>Visualising a week's worth of booking data...</h1>
-                <h3>Sunday, 06:00</h3>
+                <h3 id="timer"></h3>
             </div>
-            <div id="root"></div>
+            <div id="map"></div>
             <footer>
                 <script src="./dist/bundle.js"></script>
             </footer>
