Add redux, but havent connect the store

--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
         <link rel="stylesheet" href="./dist/css/main.css" />
     </head>
         <body>
-            <div id="path">
-                <h1>Visualising a week's worth of booking data...</h1>
-                <h3 id="timer"></h3>
-            </div>
-            <div id="map"></div>
+            <div id="root"></div>
             <footer>
                 <script src="./dist/bundle.js"></script>
             </footer>
