--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
         <title>Booking Data</title>
         <link rel="stylesheet" href="./dist/vendor/leaflet/leaflet.css" />
         <link rel="stylesheet" href="./dist/css/main.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
         <body>
+            <div class="sidebar">
+                <div class="sidebar__button">
+                    <a class="link--active" href="#"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
+                </div>
+            </div>
             <div id="root"></div>
             <footer>
                 <script src="./dist/bundle.js"></script>
