Refactor code to remove duplication

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+        />
         <meta name="description" content="Visualising booking data">
         <title>Booking Data</title>
         <link rel="stylesheet" href="./dist/vendor/leaflet/leaflet.css" />
         <link rel="stylesheet" href="./dist/css/main.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-        <body>
-            <div class="sidebar">
-                <div class="sidebar__button">
-                    <a class="link--active" href="#"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
-                </div>
-            </div>
-            <div id="root"></div>
-            <footer>
-                <script src="./dist/bundle.js"></script>
-            </footer>
-        </body>
+
+    <body>
+        <div id="root"></div>
+        <footer>
+            <script src="./dist/bundle.js"></script>
+        </footer>
+    </body>
+
 </html>
